# polyran

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  fit.cpp  io.h  logging.cpp  logging.h  polyfit.h
tests/: README
